# Hangman

./: .gitignore  CMakeLists.txt  README.md
assets/: resource.rc
include/core/: aggiornamento.h  gioco.h  inizializzazione.h  input.h  verifica.h
include/ui/: disegno.h  grafica.h
src/: main.c
src/core/: aggiornamento.c  gioco.c  inizializzazione.c  input.c  verifica.c
src/ui/: console.c  disegno.c  grafica.c
